# iptv

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
app/: appinfo.json  index.html
app/css/: app.css
app/js/: api.js  cache.js  caps.js  config.docker.js  config.example.js  main.js  player.js  remote.js
docs/: architecture.md  plan-measured-quality.md  plan-source-reliability.md
scripts/: deploy  dev-serve  setup-key  tv-eval  tv-eval.md  tv-key  tv-log  tv-shot  tv-ssh  tv-tunnel
server/: .dockerignore  Cargo.toml  Dockerfile  config.example.toml  radios.m3u
server/src/: adts.rs  api.rs  blacklist.rs  canonical.rs  caps_cache.rs  catalog.rs  codec.rs  config.rs  default_order.rs  epg.rs  hosts.rs  main.rs  measured.rs  play_log.rs  play_sessions.rs  pps.rs  probe.rs  proxy.rs  radio.rs  slice.rs  sps.rs  state.rs  xtream.rs
server/tests/: e2e.py
tests/e2e/: _helpers.ts  per-variant-caps-sweep.spec.ts  playwright.config.ts  step-01-failure-phase.spec.ts  step-03-heartbeat.spec.ts  step-04-strict-rank.spec.ts  step-06-freshness.spec.ts  step-07-caps-matrix-version.spec.ts  step-07-caps-v3-migration.spec.ts  step-08-cap-eviction.spec.ts  step-09-candidate-overlay.spec.ts  step-10-radio-adts.spec.ts  step-13-gap-fixes.spec.ts
