[package]
name = "iptv-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "compression-gzip", "compression-br"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
bytes = "1"
base64 = "0.22"
url = "2"
regex = "1"
unicode-normalization = "0.1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing", "serde-well-known"] }
http = "1"
http-body-util = "0.1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
